--- a/container/test-app/xtest.html
+++ b/container/test-app/xtest.html
@@ -19,8 +19,11 @@
       ></luigi-container>
       <div style="grid-row: 1; max-width: 30vw">
         <div id="actions"></div>
-        <div> <span style="color: blue">web component</span> <span style="color: green">iframe</span>
-        <button onclick="clearResults()">Clear</button></div>
+        <div>
+          <span style="color: blue">web component</span>
+          <span style="color: green">iframe</span>
+          <button onclick="clearResults()">Clear</button>
+        </div>
         <div id="results"></div>
       </div>
     </div>
