--- a/core/examples/luigi-example-openui5/webapp/openui5.html
+++ b/core/examples/luigi-example-openui5/webapp/openui5.html
@@ -7,14 +7,14 @@
     <script
       id="sap-ui-bootstrap"
       src="resources/sap-ui-core.js"
-      data-sap-ui-theme="sap_fiori_3"
-      data-sap-ui-resourceroots='{
+      data-sap-ui-theme="sap_horizon"
+      data-sap-ui-resource-roots='{
 			"luigi.demo": "./", "luigi.demo.sample1": "./sample1", "luigi.demo.sample2": "./sample2"
 		}'
-      data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
-      data-sap-ui-compatVersion="edge"
+      data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
+      data-sap-ui-compat-version="edge"
       data-sap-ui-language="en"
-      data-sap-ui-logLevel="none"
+      data-sap-ui-log-level="none"
       data-sap-ui-async="true"
     ></script>
   </head>
