--- a/core/examples/luigi-example-openui5/webapp/sample1/sample1.html
+++ b/core/examples/luigi-example-openui5/webapp/sample1/sample1.html
@@ -7,14 +7,15 @@
     <script
       id="sap-ui-bootstrap"
       src="../resources/sap-ui-core.js"
-      data-sap-ui-theme="sap_fiori_3"
-      data-sap-ui-resourceroots='{
+      data-sap-ui-theme="sap_horizon"
+      data-sap-ui-resource-roots='{
 			"luigi.demo.sample1": "./","luigi.demo":"../"
 		}'
-      data-sap-ui-oninit="module:luigi/demo/sample1/index"
-      data-sap-ui-logLevel="none"
+      data-sap-ui-on-init="module:luigi/demo/sample1/index"
+      data-sap-ui-log-level="none"
       data-sap-ui-language="en"
       data-sap-ui-async="true"
+      data-sap-ui-compat-version="edge"
     ></script>
   </head>
   <body class="sapUiBody">
