--- a/core/examples/luigi-example-openui5/webapp/index.html
+++ b/core/examples/luigi-example-openui5/webapp/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1"
     />
-    <link rel="stylesheet" href="libs/luigi-core/luigi.css" />
+    <link rel="stylesheet" href="libs/luigi-core/luigi_horizon.css" />
   </head>
 
   <body>
