--- a/container/test-app/xtest.html
+++ b/container/test-app/xtest.html
@@ -7,7 +7,7 @@
   <body>
     <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-gap: 1rem">
       <luigi-container
-        style="grid-row: 1; height: 600px;"
+        style="grid-row: 1; height: 600px"
         id="iframe-based-container-test"
         viewURL="./iframe/microfrontend.html"
       ></luigi-container>
