--- a/container/test-app/wc/clientAPI.html
+++ b/container/test-app/wc/clientAPI.html
@@ -133,6 +133,9 @@
           console.log(event.detail);
           window.location.hash = event.detail.link;
         });
+        luigiContainer.addEventListener(MFEventID.UPDATE_MODAL_SETTINGS, (event) => {
+          console.log(event.detail);
+        });
         luigiContainer.addEventListener(MFEventID.ALERT_REQUEST, (event) => {
           console.log(event.detail);
           console.log('payload', event.payload);
