--- a/container/test-app/wc/clientAPI.html
+++ b/container/test-app/wc/clientAPI.html
@@ -154,7 +154,9 @@
         luigiContainer.addEventListener(
           MFEventID.UPDATE_MODAL_PATH_DATA_REQUEST,
           (event) => {
-            alert(`LuigiClient.linkManager().updateModalPathInternalNavigation("${event.detail.link}")`);
+            alert(
+              `LuigiClient.linkManager().updateModalPathInternalNavigation("${event.detail.link}")`,
+            );
           },
         );
         luigiContainer.addEventListener(
