--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -242,7 +242,9 @@
       // UPDATE_MODAL_PATH_DATA_REQUEST
       luigiContainer.addEventListener(Events.UPDATE_MODAL_PATH_DATA_REQUEST, (event) => {
         console.log(Events.UPDATE_MODAL_PATH_DATA_REQUEST, event);
-        alert(`LuigiClient.linkManager().updateModalPathInternalNavigation("${event.payload.link}")`);
+        alert(
+          `LuigiClient.linkManager().updateModalPathInternalNavigation("${event.payload.link}")`,
+        );
       });
 
       // CHECK_PATH_EXISTS_REQUEST
