AddCoreSearchParams fn for wc client

--- a/container/test-app/compound/compoundClientAPI.html
+++ b/container/test-app/compound/compoundClientAPI.html
@@ -300,6 +300,10 @@
         showAnAlert(alertSettings, compoundContainer);
       });
 
+      compoundContainer.addEventListener(MFEventID.ADD_SEARCH_PARAMS_REQUEST, (event) => {
+        if (event) console.log(event.detail);
+      });
+
       // linkManager listeners:
       // path exists
       compoundContainer.addEventListener(MFEventID.PATH_EXISTS_REQUEST, (event) => {
