Adds setCurrentLocale to WC client (#4231)

--- a/container/test-app/compound/compoundClientAPI.html
+++ b/container/test-app/compound/compoundClientAPI.html
@@ -256,6 +256,15 @@
         console.log('anchor', event.detail);
       });
       compoundContainer.addEventListener(
+        MFEventID.SET_CURRENT_LOCALE_REQUEST,
+        (event) => {
+          console.log('locale', event.detail);
+          alert(
+            'LuigiClient.uxManager().setCurrentLocale()=' + event.detail.currentLocale,
+          );
+        },
+      );
+      compoundContainer.addEventListener(
         MFEventID.OPEN_USER_SETTINGS_REQUEST,
         (event) => {
           console.log('Open User Settings Request received', event.detail);
