--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -243,8 +243,7 @@
       luigiContainer.addEventListener(Events.UPDATE_MODAL_PATH_DATA_REQUEST, (event) => {
         console.log(Events.UPDATE_MODAL_PATH_DATA_REQUEST, event);
         alert(
-          Events.UPDATE_MODAL_PATH_DATA_REQUEST,
-          'message received: ' + JSON.stringify(event.detail.data),
+          `LuigiClient.linkManager().updateModalPathInternalNavigation("${event.payload.link}")`,
         );
       });
 
