--- a/container/test-app/wc/clientAPI.html
+++ b/container/test-app/wc/clientAPI.html
@@ -155,6 +155,14 @@
           },
         );
         luigiContainer.addEventListener(
+          MFEventID.UPDATE_MODAL_PATH_DATA_REQUEST,
+          (event) => {
+            alert(
+              `LuigiClient.linkManager().updateModalPathInternalNavigation("${event.detail.link}")`,
+            );
+          },
+        );
+        luigiContainer.addEventListener(
           MFEventID.SHOW_CONFIRMATION_MODAL_REQUEST,
           (event) => {
             const data = event.detail;
