--- a/container/test-app/compound/compoundClientAPI.html
+++ b/container/test-app/compound/compoundClientAPI.html
@@ -263,6 +263,10 @@
       compoundContainer.addEventListener(MFEventID.SET_ANCHOR_LINK_REQUEST, (event) => {
         console.log('anchor', event.detail);
       });
+      compoundContainer.addEventListener(MFEventID.SET_DIRTY_STATUS_REQUEST, (event) => {
+        console.log('dirty', event.detail);
+        alert('LuigiClient.uxManager().setDirtyStatus()=' + event.detail.dirty);
+      });
       compoundContainer.addEventListener(
         MFEventID.SET_CURRENT_LOCALE_REQUEST,
         (event) => {
