--- a/container/test-app/wc/clientAPI.html
+++ b/container/test-app/wc/clientAPI.html
@@ -197,6 +197,10 @@
         luigiContainer.addEventListener(MFEventID.SET_ANCHOR_LINK_REQUEST, (event) => {
           console.log('anchor', event.detail);
         });
+        luigiContainer.addEventListener(MFEventID.SET_DIRTY_STATUS_REQUEST, (event) => {
+          console.log('dirty', event.detail);
+          alert('LuigiClient.uxManager().setDirtyStatus()=' + event.detail.dirty);
+        });
         luigiContainer.addEventListener(MFEventID.SET_CURRENT_LOCALE_REQUEST, (event) => {
           console.log('locale', event.detail);
           alert(
