--- a/container/test-app/wc/clientAPI.html
+++ b/container/test-app/wc/clientAPI.html
@@ -190,6 +190,9 @@
             console.log(event.detail);
           },
         );
+        luigiContainer.addEventListener(MFEventID.ADD_SEARCH_PARAMS_REQUEST, (event) => {
+          if (event) console.log(JSON.stringify(event.detail));
+        });
         luigiContainer.addEventListener(MFEventID.ADD_NODE_PARAMS_REQUEST, (event) => {
           const params = event.detail.params;
           console.log('params', params);
