Wire Compound LC to Core

--- a/container/test-app/iframe/microfrontend.html
+++ b/container/test-app/iframe/microfrontend.html
@@ -35,7 +35,7 @@
   <body style="-webkit-font-smoothing: antialiased; color: #515559">
     <div id="imgCnt"></div>
     <div id="textCnt">
-      <h1 id="title">Multi purpose demo page</h1>
+      <h1 id="title">iFrame based Container</h1>
       <p id="content">Some content</p>
       <button onclick="testNav()">test navigate</button>
       <button onclick="testCustom()">test custom message</button>
