--- a/container/test-app/iframe/microfrontend.html
+++ b/container/test-app/iframe/microfrontend.html
@@ -89,8 +89,11 @@
         });
       }
 
-      function updateModalSettings(){
-        LuigiClient.linkManager().updateModalSettings({title:'Updated modal title', size:'l'})
+      function updateModalSettings() {
+        LuigiClient.linkManager().updateModalSettings({
+          title: 'Updated modal title',
+          size: 'l',
+        });
       }
 
       function openAsDrawer() {
