Extend XTest Html with Luigi Compound Container  (#4252)

--- a/container/test-app/index.html
+++ b/container/test-app/index.html
@@ -46,7 +46,10 @@
   <body>
     <div class="container">
       <h1>Container Test-App</h1>
-      <p>Following are categorized links to container functionality.</p>
+      <p>
+        Following are categorized links to separate container functionality. Or go to
+        <a href="xtest.html" style="font-size: 40px">XTest Page</a> for all in one testing
+      </p>
       <p><i>Add new files in the table below as needed.</i></p>
 
       <table>
