--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -126,7 +126,14 @@
         alert('show-alert-request message received: ' + JSON.stringify(event.detail));
         console.log(event.detail.data.data);
         alertSettings = event.detail.data.data;
-        showAnAlert(alertSettings);
+
+        if (alertSettings?.settings?.text !== 'Callback Test') {
+          showAnAlert(alertSettings);
+        } else {
+          if (event.callbackFn && typeof event.callbackFn === 'function') {
+            event.callbackFn(true);
+          }
+        }
       });
 
       luigiContainer.addEventListener(Events.ADD_SEARCH_PARAMS_REQUEST, (event) => {
@@ -148,7 +155,14 @@
         const data = event.detail;
         const val = confirm(data.body);
         alert('show-confirmation-modal message received: ' + JSON.stringify(data));
-        luigiContainer.notifyConfirmationModalClosed(val);
+
+        if (data?.data?.data?.settings?.header !== 'Callback Test') {
+          luigiContainer.notifyConfirmationModalClosed(val);
+        } else {
+          if (event.callbackFn && typeof event.callbackFn === 'function') {
+            event.callbackFn(true);
+          }
+        }
       });
 
       luigiContainer.addEventListener(Events.SHOW_LOADING_INDICATOR_REQUEST, (event) => {
@@ -228,6 +242,10 @@
           Events.GET_CURRENT_ROUTE_REQUEST,
           'message received: ' + JSON.stringify(event.detail.data),
         );
+
+        if (event.callbackFn && typeof event.callbackFn === 'function') {
+          event.callbackFn('/test/route');
+        }
       });
 
       // NAVIGATION_COMPLETED_REPORT
@@ -254,6 +272,10 @@
           Events.CHECK_PATH_EXISTS_REQUEST,
           'message received: ' + JSON.stringify(event.detail.data),
         );
+
+        if (event.callbackFn && typeof event.callbackFn === 'function') {
+          event.callbackFn(true);
+        }
       });
 
       // SET_DIRTY_STATUS_REQUEST
