Fixes Prettier issues

--- a/container/test-app/iframe/microfrontend.html
+++ b/container/test-app/iframe/microfrontend.html
@@ -43,7 +43,9 @@
       <button onclick="testAddNodeParams()">Test add node params</button>
       <button onclick="testGetNodeParams()">Test get node params</button>
       <button onclick="testShowConfirmationModal()">test show confirmation modal</button>
-      <button onclick="testConfirmationModalCallback()">test confirmation modal callback</button>
+      <button onclick="testConfirmationModalCallback()">
+        test confirmation modal callback
+      </button>
       <button onclick="testShowLoadingIndicator()">test show loading indicator</button>
       <button onclick="testHideLoadingIndicator()">test hide loading indicator</button>
       <button onclick="testGetHistoryState()">test history state</button>
