--- a/container/test-app/iframe/microfrontend.html
+++ b/container/test-app/iframe/microfrontend.html
@@ -74,11 +74,11 @@
         test showAlert with notifyAlertClosed
       </button>
       <button onclick="goBack()">test goBack()</button>
-
       <button onclick="openAsModal()">test openAsModal()</button>
       <button onclick="openAsDrawer()">test openAsDrawer()</button>
       <button onclick="openAsSplitview()">test openAsSplitview()</button>
       <button onclick="updateModalSettings()">test updateModalSettings</button>
+      <br><br>
       <span id="result"></span>
     </div>
 
@@ -221,7 +221,11 @@
       }
 
       function testGetCurrentRoute() {
-        LuigiClient.linkManager().getCurrentRoute();
+        LuigiClient.linkManager().getCurrentRoute()
+          .then((result) => {
+            document.querySelector('#result').innerHTML =
+              `getCurrentRoute: ${result}`;
+          });
       }
 
       function testNavigationFinished() {
@@ -233,7 +237,11 @@
       }
 
       function testCheckPathExists() {
-        LuigiClient.linkManager().pathExists('/projects/pr2');
+        LuigiClient.linkManager().pathExists('/projects/pr2')
+          .then((result) => {
+            document.querySelector('#result').innerHTML =
+              `pathExists: ${result}`;
+          });
       }
 
       function testSetDirtyStatus() {
